# ai-hedge-fund

./: .env.example  pyproject.toml
src/: main.py
src/tools/: api.py
