[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.48",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.1",
    "langchain-groq>=0.3.1",
    "langchain-openai>=0.3.10",
    "langgraph>=0.3.20",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
]
